--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/headingTextview"
-        android:layout_width="283dp"
-        android:layout_height="101dp"
+        android:layout_width="271dp"
+        android:layout_height="85dp"
         android:gravity="center"
         android:text="Answer the following questions:"
         android:textColor="#aed4e6"
@@ -20,23 +20,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.058" />
+        app:layout_constraintVertical_bias="0.024" />
 
     <TextView
         android:id="@+id/questionTextview"
-        android:layout_width="338dp"
-        android:layout_height="154dp"
+        android:layout_width="399dp"
+        android:layout_height="207dp"
         android:background="#bacfd9"
         android:gravity="center"
-        android:text=" "
+        android:text=" nn"
         android:textColor="@color/white"
-        android:textSize="28sp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.239" />
+        app:layout_constraintVertical_bias="0.206" />
 
     <Button
         android:id="@+id/trueBtn"
@@ -67,17 +67,17 @@
     <TextView
         android:id="@+id/answerTextview"
         android:layout_width="274dp"
-        android:layout_height="94dp"
+        android:layout_height="56dp"
         android:gravity="center"
         android:text="Your answer is:                 "
         android:textColor="#aed4e6"
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.458" />
+        app:layout_constraintVertical_bias="0.485" />
 
     <Button
         android:id="@+id/nextBtn"
