--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -10,13 +10,14 @@
 
     <TextView
         android:id="@+id/reviewTextview"
-        android:layout_width="354dp"
-        android:layout_height="304dp"
+        android:layout_width="380dp"
+        android:layout_height="452dp"
         android:background="#cfeafc"
         android:gravity="center"
+        android:hint="Review: "
         android:text=" "
         android:textColor="#142833"
-        android:textSize="24sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,38 +38,37 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.098" />
+        app:layout_constraintVertical_bias="0.047" />
 
     <Button
         android:id="@+id/reviewBtn"
         android:layout_width="310dp"
         android:layout_height="61dp"
+        android:backgroundTint="#78a3c2"
         android:text="REVIEW"
         android:textColor="#142833"
         android:textSize="26sp"
-        android:backgroundTint="#78a3c2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.715" />
+        app:layout_constraintVertical_bias="0.84" />
 
     <Button
         android:id="@+id/exitBtn"
         android:layout_width="310dp"
         android:layout_height="61dp"
+        android:backgroundTint="#78a3c2"
         android:text="EXIT"
         android:textColor="#142833"
         android:textSize="26sp"
-        android:backgroundTint="#78a3c2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.852" />
+        app:layout_constraintVertical_bias="0.955" />
 </androidx.constraintlayout.widget.ConstraintLayout>
