--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -12,13 +12,12 @@
         android:id="@+id/reviewTextview"
         android:layout_width="380dp"
         android:layout_height="452dp"
-        android:background="#cfeafc"
         android:gravity="center"
+        android:background="#e5f4ff"
         android:hint="Review: "
         android:text=" "
         android:textColor="#142833"
-        android:textSize="15sp"
-        android:textStyle="bold"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
@@ -30,12 +29,12 @@
         android:id="@+id/feedbackTextview"
         android:layout_width="377dp"
         android:layout_height="53dp"
-        android:background="#cfeafc"
+        android:background="#e5f4ff"
         android:gravity="center"
         android:text="Lets check your results"
+        android:textStyle="bold"
         android:textColor="#142833"
         android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +45,7 @@
         android:id="@+id/reviewBtn"
         android:layout_width="310dp"
         android:layout_height="61dp"
-        android:backgroundTint="#78a3c2"
+        android:backgroundTint="#97b1c4"
         android:text="REVIEW"
         android:textColor="#142833"
         android:textSize="26sp"
@@ -61,7 +60,7 @@
         android:id="@+id/exitBtn"
         android:layout_width="310dp"
         android:layout_height="61dp"
-        android:backgroundTint="#78a3c2"
+        android:backgroundTint="#97b1c4"
         android:text="EXIT"
         android:textColor="#142833"
         android:textSize="26sp"
