--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -14,29 +14,30 @@
         android:layout_height="85dp"
         android:gravity="center"
         android:text="Answer the following questions:"
-        android:textColor="#aed4e6"
-        android:textSize="25sp"
+        android:textColor="#a1c7b4"
+        android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.024" />
+        app:layout_constraintVertical_bias="0.072" />
 
     <TextView
         android:id="@+id/questionTextview"
-        android:layout_width="399dp"
-        android:layout_height="207dp"
+        android:layout_width="384dp"
+        android:layout_height="189dp"
         android:background="#bacfd9"
         android:gravity="center"
-        android:text=" nn"
-        android:textColor="@color/white"
+        android:hint=""
+        android:text=""
+        android:textColor="#5b7669"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.206" />
+        app:layout_constraintVertical_bias="0.241" />
 
     <Button
         android:id="@+id/trueBtn"
@@ -69,15 +70,16 @@
         android:layout_width="274dp"
         android:layout_height="56dp"
         android:gravity="center"
-        android:text="Your answer is:                 "
-        android:textColor="#aed4e6"
-        android:textSize="25sp"
+        android:hint=""
+        android:text=""
+        android:textColor="#a1c7b4"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.485" />
+        app:layout_constraintVertical_bias="0.459" />
 
     <Button
         android:id="@+id/nextBtn"
